# HubSPO-rs

./: CLAUDE.md  Cargo.toml  README.md
crates/hubspo-compatibility/src/: lib.rs
crates/hubspo-engine/src/: lib.rs
crates/hubspo-graph/src/: lib.rs
crates/hubspo-invariants/src/: lib.rs
crates/hubspo-models/src/: lib.rs
crates/hubspo-ontology/src/: associations.rs  lib.rs  properties.rs
crates/hubspo-ontology/src/objects/: company.rs  contact.rs  deal.rs  mod.rs
